@@ -61,6 +61,8 @@ Bug Fixes
 ---------------------
 * SOLR-17296: Remove (broken) singlePass attempt when reRankScale + debug is used, and fix underlying NPE. (hossman)
 
+* SOLR-17307: Use the system file separator instead of an explicit '/' in CachingDirectoryFactory (Houston Putman, hossman)
+
 ==================  9.6.0 ==================
 New Features
 ---------------------
